# Eirene

./: .gitignore  CMakeLists.txt  README.md  build.sh
evalutaion/: README  gamma_testall_v27.sh  normal_testall_v27.sh  random_testall_v27.sh  random_testall_v35.sh  random_testall_v38.sh  random_testall_v39.sh  random_testall_v41.sh  zipf_all.sh
prof/: prof.sh  prof23_95_v27_insert.res  prof23_95_v27_query.res  prof23_uniform_v1.sh  prof23_uniform_v1_events.sh  prof23_uniform_v27_insert.sh  prof23_uniform_v27_query.sh  prof23_uniform_v35_insert.sh  prof23_uniform_v35_query.sh  prof23_uniform_v38.sh  prof23_uniform_v39.sh  prof23_uniform_v39_analysis_metrics.sh  prof23_v0.sh  prof23_v1.sh  prof23_v13.sh  prof23_v14.sh  prof23_v17.sh  prof23_v2.sh  prof23_v21.sh  prof23_v22.sh  prof23_v23.sh  prof23_v24.sh  prof23_v27.sh  prof23_v27_insert.sh  prof23_v31.sh  prof23_v31_insert.sh  prof23_v33.sh  prof23_v35.sh  prof23_v35_insert.sh  prof23_v35_query.sh  prof23_v7.sh  prof23_v9.sh  prof23_zipf_v1.sh  prof23_zipf_v27_insert.sh  prof23_zipf_v27_query.sh  prof23_zipf_v35_insert.sh  prof23_zipf_v35_query.sh  prof23_zipf_v38.sh  prof24_v1.sh  prof25_v1.sh  (+29 more)
prof/bakup_before_20200423/: query23_95_v27_insert.prof  query23_95_v27_query.prof  query23_95_v31_insert.prof_bak  query23_95_v33.prof  query23_95_v35.prof  query23_95_v35_insert.prof  query23_95_v35_query.prof  query23_95_v35_query_sadsda.prof  query23_95_v7.prof  (+21 more)
special_eval/: query_num_each_conflicts.cpp  query_num_each_conflicts.py
src/: global_conf.h  input-helper.h  main.cpp  time_measure.cuh  tree.h
(+53 files in other folders)
